fixed spacing

--- a/public/kanbas/dashboard/index.css
+++ b/public/kanbas/dashboard/index.css
@@ -1,5 +1,5 @@
 .col {
-  width: 270px;
+  width: 300px;
   padding-top: 30px; 
   padding-bottom: 30px;
 }
